Revert "Fix iOS whitespace added by scrollr"
This reverts commit 147c3283

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-html {
-    overflow: scroll !important;
-}
-
 body {
     font-family: Georgia, serif;
     line-height: 1.4;
